--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI="mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.2.5"
+MONGO_URI="mongodb+srv://ashutosh:ashutosh@cluster0.tbialjt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 PORT=5001
 SECRET_KEY="secret"
